# Easy-Matching

./: .gitignore  LICENSE  README.md
include/easymatch/: easymatch.hpp
test/: CMakeLists.txt  build_test.sh  easy_match_test.cpp  run_test.sh
